--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,4 +1,5 @@
 @import '_animations';
+@import '_variables';
 
 * {
   box-sizing: border-box;
@@ -100,6 +101,10 @@ body {
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
+
+    @media screen and (max-width: $iphoneX-width) {
+      display: none;
+    }
 
     .header__controls__item {
       display: flex;
