[REFACTOR] new duck appears each 1 second
- move enterTheDuck calls to countdownInterval which means a new duck will
  appear each 1 second

- ducks no longer need to call enterTheDuck using timeouts of their
  animation-delay (see above)

- remove --active class from all ducks when currentStage changes

[UX IMPROVE]

 - add new static animation for ducks with an animation-delay of less than
   1s (so they appear without transition).

--- a/public/styles/_animations.scss
+++ b/public/styles/_animations.scss
@@ -16,6 +16,14 @@
     opacity: 0;
   }
 }
+@keyframes enterTheDuck__STATIC {
+  0% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
 
 @keyframes duckWhackedShake {
   $delay: 5;
